# ai-prompt-runner

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.example.toml  cosmic-ray.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-hardening.yml  mutation.yml
docs/: architecture.md  cli-reference.md  configuration.md  migration.md  ops-runbook.md  output-contract.md  release-checklist.md  testing.md
schemas/: response.schema.json
src/: __init__.py  cli.py
src/ai_prompt_runner/: __init__.py  api.py  cli.py
src/ai_prompt_runner/core/: __init__.py  error_taxonomy.py  models.py  runner.py  validators.py
src/ai_prompt_runner/services/: __init__.py  anthropic_provider.py  base.py  google_provider.py  http_provider.py  mock_provider.py  openai_compatible_provider.py  provider_factory.py
src/ai_prompt_runner/utils/: __init__.py
src/core/: errors.py  runner.py  validators.py
src/services/: base.py  http_provider.py  mock_provider.py  provider_factory.py
src/utils/: file_io.py
tests/e2e/: test_cli.py
tests/fixtures/: response_payload_v0.1.json  response_payload_v0.5.json
tests/unit/: test_anthropic_provider.py  test_api.py  test_base_provider.py  test_error_taxonomy.py  test_file_io.py  test_google_provider.py  test_http_provider.py  test_mock_provider.py  test_models.py  test_openai_compatible_provider.py  test_provider_contract.py  test_provider_factory.py  test_response_schema.py  test_response_schema_backcompat.py  test_runner.py  test_validators.py
