[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-prompt-runner"
version = "0.3.0"
description = "CLI tool to send prompts to an AI API and save JSON/Markdown outputs."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
]

[project.scripts]
ai-prompt-runner = "src.cli:main"

[tool.pytest.ini_options]
addopts = "-vv -s"
testpaths = ["tests"]